# my-data-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data-competitions/datacamp-board-game/: .gitignore  notebook.ipynb
data-competitions/datacamp-good-sleep/: notebook.ipynb
data-competitions/datacamp-nutrition-fact-check/: .gitignore  README.md  (+1 more)
neo4j-playground/: README.md
neo4j-playground/gds-introduction/: .gitignore  Makefile  README.md  main.py  pyproject.toml  template.env
neo4j-playground/gds-introduction/derived/: label_propagation_communities.csv  louvain_communities.csv
neo4j-playground/gds-introduction/example-1-community-detection/: IMPLEMENTATION_NOTES.md  README.md  community_detection_example.py  demo.py  utils.py
neo4j-playground/gds-introduction/results/derived/: community_summary.csv  label_propagation_communities.csv  louvain_communities.csv  metrics.csv
toyota-ocasion/: .gitignore  Makefile  README.md  cli.py  create_schema.sql  pyproject.toml
toyota-ocasion/.streamlit/: secrets.toml
toyota-ocasion/loaders/: base.py  create_schema_history.sql  create_schema_last_seen_avail.sql  refresh_last_see_avail.sql
toyota-ocasion/mappers/: base.py  toyota.py  toyota_mappings.yaml
toyota-ocasion/notebooks/: test.ipynb
toyota-ocasion/scrapers/: base.py  toyota.py
toyota-ocasion/streamlits/: app.py  app.yaml  coches.db  requirements.txt
toyota-ocasion/streamlits/.streamlit/: config.toml  secrets.toml
toyota-ocasion/transformers/: base.py  toyota.py
(+9 files in other folders)
