[tool.poetry]
name = "my-data-playground"
version = "0.1.0"
description = ""
authors = ["Miguel <miguel.fiandor.gutierrez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
