[tool.poetry]
name = "toyota-ocasion"
version = "0.1.0"
description = "An ETL and dashboard project on Toyota Official Site"
authors = ["Miguel <miguel.fiandor.gutierrez@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scrapers" },
]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "<7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
